--- a/YWWACP/YWWACP/Resources/layout/ExercisePickDay.axml
+++ b/YWWACP/YWWACP/Resources/layout/ExercisePickDay.axml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bleh"
-                local:MvxBind="Click BackToDiaryCommand" />
+                local:MvxBind="Click BackToExerciseCommand" />
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
