functinality are moved from FirstViewModel into GraphViewModel. GraphViewModel should work as home page now

--- a/YWWACP/YWWACP/Resources/layout/navbar.axml
+++ b/YWWACP/YWWACP/Resources/layout/navbar.axml
@@ -60,6 +60,7 @@
         android:paddingTop="5dp"
         android:paddingStart="5dp"
         android:gravity="center_vertical"
+        android:drawableStart="@drawable/weightlifting"
         local:MvxBind="Click OpenExerciseCommand"
-        android:text="YO" />
+        android:text="" />
 </LinearLayout>
