--- a/YWWACP/YWWACP/Resources/layout/Diary.axml
+++ b/YWWACP/YWWACP/Resources/layout/Diary.axml
@@ -51,13 +51,66 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/my_purple" />
+      <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:id="@+id/mmmmm"
+                android:weightSum="100">
+        <TextView
+            android:text="Goal:"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="10" />
+        <TextView
+            style="@+style/textViewTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="90"
+            android:textSize="15dp"
+            local:MvxBind="Text GoalContent" />
+      </LinearLayout>
+      <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:id="@+id/gaollayout"
+                android:weightSum="100">
+        <TextView
+            android:text="Satisfaction:"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="23" />
+        <TextView
+            style="@+style/textViewTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="77"
+            android:textSize="15dp"
+            local:MvxBind="Text GoalSatisfaction" />
+      </LinearLayout>
+      <LinearLayout
+        android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/navigation"
+            android:layout_below="@id/gaollayout"
+            android:layout_weight="80"
+            android:weightSum="100"
+            android:id="@+id/sdfgfdasg">
+      <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/my_purple" />
         <Mvx.MvxListView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="90"
+            android:layout_height="fill_parent"
             local:MvxItemTemplate="@layout/diaryentryrow"
             android:layout_above="@id/navigation"
-            android:layout_below="@id/linearLayoutWrapTopButtons"
+            android:layout_below="@id/gaollayout"
             local:MvxBind="ItemsSource Entries;" />
+      </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
