--- a/YWWACP/YWWACP/Resources/layout/HealthPlan.axml
+++ b/YWWACP/YWWACP/Resources/layout/HealthPlan.axml
@@ -10,6 +10,7 @@
         android:layout_alignParentBottom="true"
         layout="@layout/navbar" />
     <LinearLayout
+        android:layout_above="@id/navigation"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,33 +37,32 @@
                 android:layout_weight="50"
                 android:id="@+id/btnsdgsdg"
                 local:MvxBind="Click OpenMealCommand" />
-                
         </LinearLayout>
-      <LinearLayout
-        android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="90"
-            android:weightSum ="100"
-            android:id="@+id/sdfgfdasg">
-        
-        <RelativeLayout
+        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@id/navigation"
+            android:layout_weight="90"
+            android:weightSum="100"
             android:id="@+id/sdfgfdasg">
-              <View
+            <RelativeLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:id="@+id/line"
-                android:background="@color/my_purple" />
-            <Mvx.MvxListView
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_below="@id/line"
-                local:MvxItemTemplate="@layout/healthplanrow"
-                local:MvxBind="ItemsSource Entries; ItemClick SelectEntryCommand" />
-        </RelativeLayout>
-      </LinearLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/revid1">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:id="@+id/line"
+                    android:background="@color/my_purple" />
+                <Mvx.MvxListView
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_below="@id/line"
+                    local:MvxItemTemplate="@layout/healthplanrow"
+                    local:MvxBind="ItemsSource Entries; ItemClick SelectEntryCommand" />
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
