--- a/YWWACP/YWWACP/Resources/drawable/FirstViewRect.axml
+++ b/YWWACP/YWWACP/Resources/drawable/FirstViewRect.axml
@@ -8,7 +8,7 @@
        android:radius="7dp"/>
   <gradient android:angle="-90"
     	android:startColor="#FF69B4"
-    	android:endColor="#FFC0CB" />
+    	android:endColor="#ffffff" />
   <stroke
     android:color="#FF69B4"
     android:width="1dp"
