fixed design on comments, trash bin is no longer overwritten by comments

--- a/YWWACP/YWWACP/Resources/layout/Comments.axml
+++ b/YWWACP/YWWACP/Resources/layout/Comments.axml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/questionwrap"
+        android:minHeight="100dp"
         android:layout_alignParentTop="true">
         <TextView
             style="@+style/textViewTheme"
