Goal is displayed in diary as intended

--- a/YWWACP/YWWACP/Resources/layout/Diary.axml
+++ b/YWWACP/YWWACP/Resources/layout/Diary.axml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         layout="@layout/navbar" />
-    <LinearLayout
+  <LinearLayout
+        android:layout_above="@id/navigation"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +18,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="0dp"
             android:paddingLeft="90px"
             android:paddingRight="90px"
             android:layout_weight="10"
@@ -47,10 +48,17 @@
                 android:paddingRight="20px"
                 local:MvxBind="Click NextDayCommand" />
         </LinearLayout>
-        <View
+    <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/my_purple" />
+    <LinearLayout
+      android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_weight="10"
+                android:id="@+id/mmmmm"
+                >
       <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -58,6 +66,7 @@
                 android:layout_weight="5"
                 android:id="@+id/mmmmm"
                 android:weightSum="100">
+        
         <TextView
             android:text="Goal:"
             android:layout_width="0dp"
@@ -91,26 +100,32 @@
             android:textSize="15dp"
             local:MvxBind="Text GoalSatisfaction" />
       </LinearLayout>
+    </LinearLayout>
       <LinearLayout
         android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_above="@id/navigation"
-            android:layout_below="@id/gaollayout"
             android:layout_weight="80"
             android:weightSum="100"
             android:id="@+id/sdfgfdasg">
-      <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/my_purple" />
-        <Mvx.MvxListView
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            local:MvxItemTemplate="@layout/diaryentryrow"
-            android:layout_above="@id/navigation"
-            android:layout_below="@id/gaollayout"
-            local:MvxBind="ItemsSource Entries;" />
+        <RelativeLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/revid1">
+          <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:id="@+id/line"
+                android:background="@color/my_purple" />
+          <Mvx.MvxListView
+              android:layout_width="match_parent"
+              android:layout_height="fill_parent"
+              local:MvxItemTemplate="@layout/diaryentryrow"
+              android:layout_below="@id/line"
+              local:MvxBind="ItemsSource Entries; ItemClick SelectEntryCommand" />
+        </RelativeLayout>
       </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
