Completed diary and health plan pages with detail pages when clicking on meals and activities. Also did a lot of error handeling

--- a/YWWACP/YWWACP/Resources/layout/AddExerciseToPlanRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/AddExerciseToPlanRow.axml
@@ -10,4 +10,10 @@
         android:layout_height="wrap_content"
         android:textSize="30dp"
         local:MvxBind="Text Title" />
+    <TextView
+      style="@+style/textViewTheme"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:textSize="15dp"
+      local:MvxBind="Text ExerciseSummary" />
 </LinearLayout>
