--- a/YWWACP/YWWACP/Resources/layout/AddMealToPlanRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/AddMealToPlanRow.axml
@@ -10,4 +10,11 @@
         android:layout_height="wrap_content"
         android:textSize="30dp"
         local:MvxBind="Text MealTitle" />
+    <TextView
+    style="@+style/textViewTheme"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:textSize="15dp"
+    local:MvxBind="Text MealSummary" />
+  
 </LinearLayout>
