--- a/YWWACP/YWWACP/Resources/layout/AddMealToPlan.axml
+++ b/YWWACP/YWWACP/Resources/layout/AddMealToPlan.axml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
         <Mvx.MvxListView
             android:layout_width="match_parent"
