--- a/YWWACP/YWWACP/Resources/layout/HealthPlanExercises.axml
+++ b/YWWACP/YWWACP/Resources/layout/HealthPlanExercises.axml
@@ -22,6 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             local:MvxItemTemplate="@layout/healthplanexerciserow"
-            local:MvxBind="ItemsSource Exercises;" />
+            local:MvxBind="ItemsSource Exercises; ItemClick SelectExerciseCommand" />
     </LinearLayout>
 </LinearLayout>
