--- a/YWWACP/YWWACP/Resources/layout/HealthPlanMeals.axml
+++ b/YWWACP/YWWACP/Resources/layout/HealthPlanMeals.axml
@@ -20,8 +20,8 @@
             android:background="@color/my_purple" />
     </LinearLayout>
     <Mvx.MvxListView
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            local:MvxItemTemplate="@layout/healthplanmealsrow"
-            local:MvxBind="ItemsSource Meals;" />
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        local:MvxItemTemplate="@layout/healthplanmealsrow"
+        local:MvxBind="ItemsSource Meals; ItemClick SelectMealCommand" />
 </LinearLayout>
