--- a/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
+++ b/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/boxwrap"
         android:gravity="center"
-        android:minHeight="150dp">
+        android:minHeight="110dp">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
@@ -92,7 +92,7 @@
         android:orientation="vertical"
         android:layout_below="@id/boxwrap"
         android:layout_width="fill_parent"
-        android:layout_height="250dp">
+        android:layout_height="230dp">
         <OxyPlot.Xamarin.Android.PlotView
             android:id="@+id/plot_view"
             android:layout_width="match_parent"
@@ -111,6 +111,7 @@
     <Mvx.MvxListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="250dp"
         android:layout_above="@id/navigation"
         android:layout_below="@id/plot_view"
         android:layout_alignParentLeft="true"
