--- a/YWWACP/YWWACP/Resources/layout/WriteComment.axml
+++ b/YWWACP/YWWACP/Resources/layout/WriteComment.axml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <EditText
-        android:inputType="textMultiLine"
+        android:inputType="textCapSentences|textMultiLine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTextWriteComment"
